--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 <body>
   <div class="container">
     <div class="display">
-      <input type="text" class="input" id="input">
+      <div class="actions">
+        <div class="previous-action"></div>
+        <input type="text" class="input" id="input">
+      </div>
       <div id="wyswietl">
         <img id="percent" src="icons/procent.svg" class="input-icon" alt="procent">
         <img id="division" src="icons/dzielenie.svg" class="input-icon" alt="znaczek dzielenie">
